# hanoi

./: .gitignore  .travis.yml  README.md  _CoqProject  coq-hanoi.opam  demontis.v  extra.v  gdist.v  ghanoi.v  ghanoi3.v  ghanoi4.v  hanoi.opam  hanoi3.v  hanoi4.v  lhanoi3.v  meta.yml  opam  phi.v  psi.v  rhanoi3.v  rhanoi4.v  shanoi.v  shanoi4.v  star.v  triangular.v  tsplit.v  zify.v
.github/workflows/: docker-action.yml
html2/: coqdoc.css  hanoi.extra.html  hanoi.gdist.html  hanoi.ghanoi.html  hanoi.ghanoi3.html  hanoi.ghanoi4.html  hanoi.hanoi3.html  hanoi.hanoi4.html  hanoi.lhanoi3.html  hanoi.phi.html  hanoi.psi.html  hanoi.shanoi.html  hanoi.shanoi4.html  hanoi.star.html  hanoi.triangular.html  index.html  proviola.css
