opam-version: "1.2"
name: "hanoi"
maintainer: "Laurent.Thery@inria.fr"
homepage: "https://github.com/thery/hanoi"
bug-reports: "https://github.com/thery/hanoi/issues"
dev-repo: "git@github.com:thery/hanoi"
synopsis: "Hanoi for Coq"
description: "Some Proofs about the Tower of Hanoi"

license: "CeCILL-B"
authors: ["Laurent Théry"]
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
remove: ["rm" "-R" "%{lib}%/coq/user-contrib/hanoi"]
depends: [
  "coq" {(>= "8.14")}
  "coq-mathcomp-ssreflect" { (>= "1.13") }
  "coq-mathcomp-algebra" { (>= "1.13") }
  "coq-mathcomp-finmap" { (>= "1.5.1") }
  "coq-mathcomp-bigenough" { (>= "1.0.0") }
]
tags: [
]
